2011-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/Drivers.cpp: first pass at runtime
	loading of devices.

2011-02-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Carrier.h: add tag
	for carriers that use a broadcast mechanism [thanks Daniel Krieg]

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: use out-of-band
	kill messages on carriers tagged as using a broadcast mechanism.
	Previously, out-of-band kills were used only for carriers 
	tagged as connectionless. [thanks Daniel Krieg]

2011-02-08  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\serial\SerialDeviceDriver.cpp
	* src\modules\serial\SerialDeviceDriver.h
	* src\libYARP_dev\include\yarp\dev\SerialInterfaces.h
	* src\libYARP_dev\include\yarp\dev\ServerSerial.h
	Added new method flush() to the serial device driver
	
2011-02-08 Daniel Krieg <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier/: added a carrier for broadcasting
    using MPI (called bcast); fixed fatal typo in thread safety detection,
    which was relevant for e.g. openmpi

2011-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpPlugin.cmake: propagate LINK_DIRECTORIES information, 
	needed by current OpenCVConfig.cmake [thanks Lorenzo Natale]

2011-02-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/dll/: example of loading from a shared
	library or DLL (thin wrapper around ACE_DLL).

	* src/libYARP_OS/include/yarp/os/SharedLibrary.h: prep
	work for loading carriers/devices dynamically.

2011-02-04 Daniel Krieg <krieg@fias.uni-frankfurt.de>

    * src/doc/yarp_port_auth.dox: Included a tutorial about
    the port authentication mechanism (added to svn on 2010-10-18)
    in the YARP documentation

2011-02-01  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpDoc.cmake: YARP documentation should now always 
	be verbose, rather than sometimes filtered as it has
	been for legacy reasons [thanks Lorenzo Natale]
