@@ -195,7 +195,8 @@ MACRO(ADD_PLUGIN_NORMALIZED plugin_name type include wrapper category)
   SET(ENABLE_${MYNAME} ${COMPILE_BY_DEFAULT} CACHE BOOL "Enable/disable compilation of ${MYNAME}")
   IF (ENABLE_${MYNAME})
     SET(RUNTIME_${MYNAME} ${COMPILE_BY_DEFAULT} CACHE BOOL "Enable/disable loading of ${MYNAME} at runtime upon need")
-    MARK_AS_ADVANCED(CLEAR RUNTIME_${MYNAME})
+    # MARK_AS_ADVANCED(CLEAR RUNTIME_${MYNAME}) # don't advertise, for now
+    MARK_AS_ADVANCED(FORCE RUNTIME_${MYNAME})
   ELSE (ENABLE_${MYNAME})
     MARK_AS_ADVANCED(FORCE RUNTIME_${MYNAME})
   ENDIF (ENABLE_${MYNAME})
