@@ -23,5 +23,5 @@ if (NOT SKIP_tcpros_carrier)
   target_link_libraries(rostcp_carrier ${YARP_LIBRARIES})
 
   add_executable(yarpros yarpros.cpp)
-  target_link_libraries(yarpros YARP_init ${YARP_LIBRARIES})
+  target_link_libraries(yarpros rostcp_carrier YARP_init ${YARP_LIBRARIES})
 endif (NOT SKIP_tcpros_carrier)
